<package format="3">
  <name>graph_msgs</name>
  <version>0.2.0</version>
  <description>ROS messages for publishing graphs of different data types</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/graph_msgs</url>
  <url type="bugtracker">https://github.com/davetcoleman/graph_msgs/issues</url>
  <url type="repository">https://github.com/davetcoleman/graph_msgs/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
